--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="wrapper">
       <h1>Exoplanets</h1>
 
-      <table class="push-0">
-        <caption class="mega">NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.</caption>
+      <div class="table-wrapper scrollable">
+        <table class="push-0">
+          <caption class="mega">NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.</caption>
         <thead>
           <tr>
             <th class="name" scope="col">Name</th>
@@ -73,6 +74,7 @@
           </tr>
         </tfoot>
       </table>
+    </div>
     </div>
   </main>
 
