--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </tr>
 
             <tr>
-              <th scope="row">Dimidium</th>
+              <th class="not-bold italic" scope="row">Dimidium</th>
               <td>51 Pegasi</td>
               <td>1995</td>
               <td>50 ly</td>
@@ -44,7 +44,7 @@
             </tr>
 
             <tr>
-              <th scope="row">Osiris</th>
+              <th class="not-bold italic" scope="row">Osiris</th>
               <td>HD 209458</td>
               <td>2001</td>
               <td>150 ly</td>
@@ -52,7 +52,7 @@
             </tr>
 
             <tr>
-              <th scope="row">The Genesis planet</th>
+              <th class="not-bold italic" scope="row">The Genesis planet</th>
               <td>PSR B1620-26 & WD B1620-26</td>
               <td>2003</td>
               <td>12 400 ly</td>
@@ -60,7 +60,7 @@
             </tr>
 
             <tr>
-              <th scope="row">Kepler-438b</th>
+              <th class="not-bold italic" scope="row">Kepler-438b</th>
               <td>Kepler-438</td>
               <td>2015</td>
               <td>470 ly</td>
